--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             </div>
           </section>
         </div>
-        <section class="brands-images bg-slate-200 overflow-hidden">
-          <div class="container mx-auto">
+        <section class="brands-images bg-slate-200">
+          <div class="container mx-auto overflow-hidden">
             <div
-              class="move-horizontally py-7 flex gap-36 md:gap-14 items-center justify-center"
+              class="move-horizontally max-w-full py-7 flex gap-36 md:gap-14 items-center justify-center"
             >
               <div class="flex-none">
                 <img
