--- a/index.html
+++ b/index.html
@@ -24,97 +24,93 @@
         <i class="icon-delivery_dining text-2xl mt-0.5"></i>
         <h1 class="mr-3 font-bold">شحن مجاني والدفع عند الإستلام</h1>
       </div>
-      <section class="main text-light-textPrimary">
-        <div class="bg-slate-100">
-          <header class="py-3 px-5">
-            <div class="container mx-auto">
-              <div class="grid grid-cols-12 items-center justify-center">
-                <!-- الشعار -->
-                <div class="col-span-5">
-                  <a href="#" class="flex items-center gap-3">
-                    <img
-                      src="./imags/1732516328433920105m.svg"
-                      alt="logo"
-                      class="h-10 w-auto"
-                    />
-                    <span class="text-2xl font-bold">نور</span>
-                  </a>
-                </div>
-
-                <!-- القائمة -->
-                <div class="col-span-7 place-self-end">
-                  <button
-                    id="menu"
-                    class="md:hidden text-2xl mb-[2px] text-gray-800 hover:text-light-primary transition"
-                    aria-label="Toggle Menu"
-                  >
-                    <i class="icon-menu"></i>
-                  </button>
-                  <ul
-                    id="nav"
-                    class="md:flex md:flex-row md:items-center md:gap-4 md:py-0 md:static md:top-auto md:right-auto md:w-auto md:h-auto md:bg-transparent md:shadow-none absolute top-0 right-0 w-60 h-full z-10 py-20 flex flex-col items-center gap-7 bg-slate-100 shadow-lg shadow-slate-400/50"
-                  >
-                    <button
-                      id="close"
-                      class="md:hidden absolute top-5 left-5 border border-light-primary rounded-full w-9 h-9 text-light-primary hover:bg-light-primary hover:text-light-textPrimary transition"
-                    >
-                      X
-                    </button>
-                    <li>
-                      <a href="#" class="hover:text-light-primary transition"
-                        >أسئلة و أجوبة</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#" class="hover:text-light-primary transition"
-                        >مميزات</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="text-gray-800 hover:text-light-primary transition"
-                        >مراجعات</a
-                      >
-                    </li>
-                    <button
-                      class="flex items-center px-6 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
-                    >
-                      <span>اطلب الان</span>
-                      <i class="icon-cart mr-2 text-xl -mt-1"></i>
-                    </button>
-                  </ul>
-                </div>
+      <section class="main text-light-textPrimary bg-light-background">
+        <header class="py-3 px-5">
+          <div class="container mx-auto">
+            <div class="grid grid-cols-12 items-center justify-center">
+              <!-- الشعار -->
+              <div class="col-span-5">
+                <a href="#" class="flex items-center gap-3">
+                  <img
+                    src="./imags/1732516328433920105m.svg"
+                    alt="logo"
+                    class="h-10 w-auto"
+                  />
+                  <span class="text-2xl font-bold">نور</span>
+                </a>
               </div>
-            </div>
-          </header>
-          <section class="important-note pb-10 pt-24 text-center md:text-start">
-            <div class="container mx-auto p-7">
-              <div class="grid md:grid-cols-12 justify-between gap-16">
-                <div class="col-span-6">
-                  <img src="./imags/img-important-note.png" alt="" class="" />
-                </div>
-                <div class="col-span-6 flex flex-col justify-center gap-5">
-                  <h1 class="text-3xl font-bold">
-                    مكملات ما قبل التمرين الأفضل في مصر
-                  </h1>
-                  <p class="text-lg leading-7">
-                    مصمم لتعزيز الأداء الرياضي والطاقة أثناء التمارين. يحتوي على
-                    مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة،
-                    مثل الكافيين، الكرياتين، والبيتا ألانين. مناسب للرياضيين
-                    وهواة اللياقة البدنية الذين يسعون لتحسين كفاءتهم وتحقيق أفضل
-                    أداء أثناء التمارين.
-                  </p>
+
+              <!-- القائمة -->
+              <div class="col-span-7 place-self-end">
+                <button
+                  id="menu"
+                  class="md:hidden text-2xl mb-[2px] text-gray-800 hover:text-light-primary transition"
+                  aria-label="Toggle Menu"
+                >
+                  <i class="icon-menu"></i>
+                </button>
+                <ul
+                  id="nav"
+                  class="md:flex md:flex-row md:items-center md:gap-4 md:py-0 md:static md:top-auto md:right-auto md:w-auto md:h-auto md:bg-transparent md:shadow-none absolute top-0 right-0 w-60 h-full z-10 py-20 flex flex-col items-center gap-7 bg-slate-100 shadow-lg shadow-slate-400/50"
+                >
                   <button
-                    class="self-center px-6 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
+                    id="close"
+                    class="md:hidden absolute top-5 left-5 border bg-light-primary rounded-full w-9 h-9 hover:bg-light-primary transition"
+                  >
+                    X
+                  </button>
+                  <li>
+                    <a href="#" class="hover:text-light-primary transition"
+                      >أسئلة و أجوبة</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="hover:text-light-primary transition"
+                      >مميزات</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="hover:text-light-primary transition"
+                      >مراجعات</a
+                    >
+                  </li>
+                  <button
+                    class="flex items-center md:mr-7 px-6 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
                   >
                     <span>اطلب الان</span>
+                    <i class="icon-cart mr-2 text-xl -mt-1"></i>
                   </button>
-                </div>
+                </ul>
               </div>
             </div>
-          </section>
-        </div>
+          </div>
+        </header>
+        <section class="important-note pb-10 pt-24 text-center md:text-start">
+          <div class="container mx-auto p-7">
+            <div class="grid md:grid-cols-12 justify-between gap-16">
+              <div class="col-span-6">
+                <img src="./imags/img-important-note.png" alt="" class="" />
+              </div>
+              <div class="col-span-6 flex flex-col justify-center gap-5">
+                <h1 class="text-3xl font-bold">
+                  مكملات ما قبل التمرين الأفضل في مصر
+                </h1>
+                <p class="text-lg leading-7">
+                  مصمم لتعزيز الأداء الرياضي والطاقة أثناء التمارين. يحتوي على
+                  مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة، مثل
+                  الكافيين، الكرياتين، والبيتا ألانين. مناسب للرياضيين وهواة
+                  اللياقة البدنية الذين يسعون لتحسين كفاءتهم وتحقيق أفضل أداء
+                  أثناء التمارين.
+                </p>
+                <button
+                  class="self-center px-6 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
+                >
+                  <span>اطلب الان</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
         <section class="brands-images bg-slate-200">
           <div class="container mx-auto overflow-hidden">
             <div
