--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,16 +16,21 @@
       rel="stylesheet"
     />
   </head>
+
   <body dir="rtl">
     <div id="root">
+      <!-- إعلان الشحن المجاني -->
       <div
-        class="Announcement text-sm flex justify-center items-center p-4 bg-light-primary text-light-textPrimary shadow-sm shadow-light-textPrimary/50"
+        class="announcement text-sm flex justify-center items-center p-4 bg-light-primary text-light-textPrimary shadow-sm shadow-light-textPrimary/50"
       >
         <i class="icon-delivery_dining text-2xl mt-0.5"></i>
         <h1 class="mr-3 font-bold">شحن مجاني والدفع عند الإستلام</h1>
       </div>
-      <section class="main text-light-textPrimary bg-light-background">
-        <header class="py-3 px-5">
+
+      <!-- القسم الرئيسي -->
+      <main class="main text-light-textPrimary bg-light-background">
+        <!-- الهيدر -->
+        <header class="py-6 px-5">
           <div class="container mx-auto">
             <div class="grid grid-cols-12 items-center justify-center">
               <!-- الشعار -->
@@ -75,7 +80,7 @@
                     >
                   </li>
                   <button
-                    class="flex items-center md:mr-7 px-6 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
+                    class="flex items-center md:mr-5 px-4 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
                   >
                     <span>اطلب الان</span>
                     <i class="icon-cart mr-2 text-xl -mt-1"></i>
@@ -85,17 +90,19 @@
             </div>
           </div>
         </header>
-        <section class="important-note pb-10 pt-24 text-center md:text-start">
-          <div class="container mx-auto p-7">
+
+        <!-- الملاحظة المهمة -->
+        <section class="important-note px-5 pb-10 pt-24 text-center md:text-start">
+          <div class="container mx-auto">
             <div class="grid md:grid-cols-12 justify-between gap-16">
               <div class="col-span-6">
-                <img src="./imags/img-important-note.png" alt="" class="" />
+                <img src="./imags/img-important-note.png" alt="" />
               </div>
               <div class="col-span-6 flex flex-col justify-center gap-5">
                 <h1 class="text-3xl font-bold">
                   مكملات ما قبل التمرين الأفضل في مصر
                 </h1>
-                <p class="text-lg leading-7">
+                <p class="text-lg leading-7 text-light-textSecondary">
                   مصمم لتعزيز الأداء الرياضي والطاقة أثناء التمارين. يحتوي على
                   مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة، مثل
                   الكافيين، الكرياتين، والبيتا ألانين. مناسب للرياضيين وهواة
@@ -103,7 +110,7 @@
                   أثناء التمارين.
                 </p>
                 <button
-                  class="self-center px-6 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
+                  class="self-center px-6 py-2 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
                 >
                   <span>اطلب الان</span>
                 </button>
@@ -111,6 +118,8 @@
             </div>
           </div>
         </section>
+
+        <!-- صور العلامات التجارية -->
         <section class="brands-images bg-slate-200">
           <div class="container mx-auto overflow-hidden">
             <div
@@ -147,7 +156,67 @@
             </div>
           </div>
         </section>
-      </section>
+
+        <section class="hero py-10 px-5">
+          <div class="container mx-auto">
+            <div class="grid md:grid-cols-12 gap-16">
+              <div class="col-span-6">
+                <div class="slider relative overflow-hidden">
+                  <div class="slides flex transition-transform duration-500">
+                    <div class="slide min-w-full">
+                      <img
+                        class="object-cover max-w-full rounded-lg"
+                        src="./imags/middle-1.webp"
+                        alt="Slide 1"
+                      />
+                    </div>
+                    <div class="slide min-w-full">
+                      <img
+                        class="object-cover max-w-full rounded-lg"
+                        src="./imags/middle-2.webp"
+                        alt="Slide 2"
+                      />
+                    </div>
+                    <div class="slide min-w-full">
+                      <img
+                        class="object-cover max-w-full rounded-lg"
+                        src="./imags/middle-3.webp"
+                        alt="Slide 3"
+                      />
+                    </div>
+                  </div>
+
+                  <!-- صور مصغرة للتنقل -->
+                  <div class="thumbnail-container flex items-center gap-2 mt-5">
+                    <div class="thumbnail flex-1 cursor-pointer">
+                      <img
+                        src="./imags/middle-1.webp"
+                        class="object-cover rounded-lg h-full w-full"
+                        alt="Thumbnail 1"
+                      />
+                    </div>
+                    <div class="thumbnail flex-1 cursor-pointer">
+                      <img
+                        src="./imags/middle-2.webp"
+                        class="object-cover rounded-lg h-full w-full"
+                        alt="Thumbnail 2"
+                      />
+                    </div>
+                    <div class="thumbnail flex-1 cursor-pointer">
+                      <img
+                        src="./imags/middle-3.webp"
+                        class="object-cover rounded-lg h-full w-full"
+                        alt="Thumbnail 3"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-span-6"></div>
+          </div>
+        </section>
+      </main>
     </div>
     <script src="index.js"></script>
   </body>
