--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- <link
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+      rel="stylesheet"
+    /> -->
+    <link rel="stylesheet" href="./swiper-bundle.min.css" />
   </head>
 
   <body dir="rtl">
@@ -92,7 +97,9 @@
         </header>
 
         <!-- الملاحظة المهمة -->
-        <section class="important-note px-5 pb-10 pt-24 text-center md:text-start">
+        <section
+          class="important-note px-5 pb-10 pt-24 text-center md:text-start"
+        >
           <div class="container mx-auto">
             <div class="grid md:grid-cols-12 justify-between gap-16">
               <div class="col-span-6">
@@ -159,50 +166,54 @@
 
         <section class="hero py-10 px-5">
           <div class="container mx-auto">
-            <div class="grid md:grid-cols-12 gap-16">
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-16">
               <div class="col-span-6">
-                <div class="slider relative overflow-hidden">
-                  <div class="slides flex transition-transform duration-500">
-                    <div class="slide min-w-full">
+                <div class="slider relative overflow-hidden rounded-lg mb-5">
+                  <div class="slides swiper-wrapper">
+                    <div class="slide swiper-slide">
                       <img
-                        class="object-cover max-w-full rounded-lg"
+                        class="object-cover w-full rounded-lg"
                         src="./imags/middle-1.webp"
                         alt="Slide 1"
                       />
                     </div>
-                    <div class="slide min-w-full">
+                    <div class="slide swiper-slide w-full">
                       <img
-                        class="object-cover max-w-full rounded-lg"
+                        class="object-cover w-full rounded-lg"
                         src="./imags/middle-2.webp"
                         alt="Slide 2"
                       />
                     </div>
-                    <div class="slide min-w-full">
+                    <div class="slide swiper-slide w-full">
                       <img
-                        class="object-cover max-w-full rounded-lg"
+                        class="object-cover w-full rounded-lg"
                         src="./imags/middle-3.webp"
                         alt="Slide 3"
                       />
                     </div>
                   </div>
+                </div>
+                <div
+                  class="swiper-pagination !static !translate-x-0 !w-full"
+                ></div>
 
-                  <!-- صور مصغرة للتنقل -->
-                  <div class="thumbnail-container flex items-center gap-2 mt-5">
-                    <div class="thumbnail flex-1 cursor-pointer">
+                <div class="hidden md:block thumbnail-swiper mt-5">
+                  <div class="swiper-wrapper flex items-center gap-2">
+                    <div class="thumbnail swiper-slide cursor-pointer flex-1">
                       <img
                         src="./imags/middle-1.webp"
                         class="object-cover rounded-lg h-full w-full"
                         alt="Thumbnail 1"
                       />
                     </div>
-                    <div class="thumbnail flex-1 cursor-pointer">
+                    <div class="thumbnail swiper-slide cursor-pointer flex-1">
                       <img
                         src="./imags/middle-2.webp"
                         class="object-cover rounded-lg h-full w-full"
                         alt="Thumbnail 2"
                       />
                     </div>
-                    <div class="thumbnail flex-1 cursor-pointer">
+                    <div class="thumbnail swiper-slide cursor-pointer flex-1">
                       <img
                         src="./imags/middle-3.webp"
                         class="object-cover rounded-lg h-full w-full"
@@ -212,12 +223,13 @@
                   </div>
                 </div>
               </div>
+              <div class="col-span-6"></div>
             </div>
-            <div class="col-span-6"></div>
           </div>
         </section>
       </main>
     </div>
+    <script src="./swiper-bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
