--- a/index.html
+++ b/index.html
@@ -169,24 +169,24 @@
             <div class="grid grid-cols-1 md:grid-cols-12 gap-16">
               <div class="col-span-6">
                 <div class="slider relative overflow-hidden rounded-lg mb-5">
-                  <div class="slides swiper-wrapper">
-                    <div class="slide swiper-slide">
+                  <div class="slides swiper-wrapper ">
+                    <div class="slide swiper-slide ">
                       <img
-                        class="object-cover w-full rounded-lg"
+                        class="object-cover w-full rounded-lg hover:scale-125 transition duration-500 hover:cursor-zoom-in"
                         src="./imags/middle-1.webp"
                         alt="Slide 1"
                       />
                     </div>
                     <div class="slide swiper-slide w-full">
                       <img
-                        class="object-cover w-full rounded-lg"
+                        class="object-cover w-full rounded-lg hover:scale-125 transition duration-500 hover:cursor-zoom-in"
                         src="./imags/middle-2.webp"
                         alt="Slide 2"
                       />
                     </div>
                     <div class="slide swiper-slide w-full">
                       <img
-                        class="object-cover w-full rounded-lg"
+                        class="object-cover w-full rounded-lg hover:scale-125 transition duration-500 hover:cursor-zoom-in"
                         src="./imags/middle-3.webp"
                         alt="Slide 3"
                       />
@@ -202,7 +202,7 @@
                     <div class="thumbnail swiper-slide cursor-pointer flex-1">
                       <img
                         src="./imags/middle-1.webp"
-                        class="object-cover rounded-lg h-full w-full"
+                        class="object-cover rounded-lg h-full w-full "
                         alt="Thumbnail 1"
                       />
                     </div>
