--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div
                   id="timer"
-                  class="text-center text-light-primary font-bold text-sm md:text-xl flex gap-2 md:gap-5 justify-center items-center my-7"
+                  class="text-center text-light-primary font-bold text-sm md:text-lg lg:text-xl flex gap-2 lg:gap-5 justify-center items-center my-7"
                 >
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
