--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     ></span>
                     <span>اليوم</span>
                   </div>
-                  <div class="text-3xl text-light-textPrimary font-bold">:</div>
+                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">:</div>
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -303,7 +303,7 @@
                     ></span>
                     <span>الساعه</span>
                   </div>
-                  <div class="text-3xl text-light-textPrimary font-bold">:</div>
+                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">:</div>
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -313,7 +313,7 @@
                     ></span>
                     <span>دقيقة</span>
                   </div>
-                  <div class="text-3xl text-light-textPrimary font-bold">:</div>
+                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">:</div>
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
