--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
           class="px-5 pt-24 pb-10 text-center important-note md:text-start"
         >
           <div class="container mx-auto">
-            <div class="grid justify-between gap-16 md:grid-cols-12">
+            <div
+              class="grid justify-between gap-16 grid-cols-1 md:grid-cols-12"
+            >
               <div class="col-span-6">
                 <img src="./imags/img-important-note.png" alt="" />
               </div>
@@ -172,21 +174,21 @@
                   <div class="slides swiper-wrapper">
                     <div class="slide swiper-slide">
                       <img
-                        class="object-cover w-full transition duration-500 hover:scale-125 hover:cursor-zoom-in"
+                        class="object-cover rounded-3xl w-full transition duration-500 hover:scale-125 hover:cursor-zoom-in"
                         src="./imags/middle-1.webp"
                         alt="Slide 1"
                       />
                     </div>
                     <div class="w-full slide swiper-slide">
                       <img
-                        class="object-cover w-full transition duration-500 hover:scale-125 hover:cursor-zoom-in"
+                        class="object-cover rounded-3xl w-full transition duration-500 hover:scale-125 hover:cursor-zoom-in"
                         src="./imags/middle-2.webp"
                         alt="Slide 2"
                       />
                     </div>
                     <div class="w-full slide swiper-slide">
                       <img
-                        class="object-cover w-full transition duration-500 hover:scale-125 hover:cursor-zoom-in"
+                        class="object-cover rounded-3xl w-full transition duration-500 hover:scale-125 hover:cursor-zoom-in"
                         src="./imags/middle-3.webp"
                         alt="Slide 3"
                       />
@@ -202,21 +204,21 @@
                     <div class="flex-1 cursor-pointer thumbnail swiper-slide">
                       <img
                         src="./imags/middle-1.webp"
-                        class="object-cover w-full h-full rounded-lg"
+                        class="object-cover w-full h-full rounded-3xl"
                         alt="Thumbnail 1"
                       />
                     </div>
                     <div class="flex-1 cursor-pointer thumbnail swiper-slide">
                       <img
                         src="./imags/middle-2.webp"
-                        class="object-cover w-full h-full rounded-lg"
+                        class="object-cover w-full h-full rounded-3xl"
                         alt="Thumbnail 2"
                       />
                     </div>
                     <div class="flex-1 cursor-pointer thumbnail swiper-slide">
                       <img
                         src="./imags/middle-3.webp"
-                        class="object-cover w-full h-full rounded-lg"
+                        class="object-cover w-full h-full rounded-3xl"
                         alt="Thumbnail 3"
                       />
                     </div>
@@ -293,7 +295,9 @@
                     ></span>
                     <span>اليوم</span>
                   </div>
-                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">:</div>
+                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">
+                    :
+                  </div>
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -303,7 +307,9 @@
                     ></span>
                     <span>الساعه</span>
                   </div>
-                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">:</div>
+                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">
+                    :
+                  </div>
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -313,7 +319,9 @@
                     ></span>
                     <span>دقيقة</span>
                   </div>
-                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">:</div>
+                  <div class="text-4xl text-light-textPrimary font-bold -mt-2">
+                    :
+                  </div>
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
