--- a/index.html
+++ b/index.html
@@ -171,38 +171,38 @@
         </section>
 
         <section class="hero px-5 py-10">
-            <div class="grid grid-cols-1 gap-16 md:grid-cols-12 ">
+          <div class="container mx-auto">
+            <div class="grid grid-cols-1 gap-16 md:grid-cols-12">
               <div class="col-span-6">
-                <div class="slider-container mx-auto relative">
-                  <div class="relative mb-5 overflow-hidden rounded-3xl slider">
-                    <div class="slides swiper-wrapper">
-                      <div class="slide swiper-slide">
-                        <img
-                          class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
-                          src="./imags/middle-1.webp"
-                          alt="Slide 1"
-                        />
-                      </div>
-                      <div class="w-full slide swiper-slide">
-                        <img
-                          class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
-                          src="./imags/middle-2.webp"
-                          alt="Slide 2"
-                        />
-                      </div>
-                      <div class="w-full slide swiper-slide">
-                        <img
-                          class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
-                          src="./imags/middle-3.webp"
-                          alt="Slide 3"
-                        />
-                      </div>
+                <div class="slider relative mb-5 overflow-hidden rounded-3xl">
+                  <div class="slides swiper-wrapper">
+                    <div class="slide swiper-slide">
+                      <img
+                        class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
+                        src="./imags/middle-1.webp"
+                        alt="Slide 1"
+                      />
+                    </div>
+                    <div class="w-full slide swiper-slide">
+                      <img
+                        class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
+                        src="./imags/middle-2.webp"
+                        alt="Slide 2"
+                      />
+                    </div>
+                    <div class="w-full slide swiper-slide">
+                      <img
+                        class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
+                        src="./imags/middle-3.webp"
+                        alt="Slide 3"
+                      />
                     </div>
                   </div>
-                  <div
-                    class="swiper-pagination !static !translate-x-0 !w-full"
-                  ></div>
                 </div>
+
+                <div
+                  class="swiper-pagination !static !translate-x-0 !w-full"
+                ></div>
 
                 <div class="hidden mt-5 md:block thumbnail-swiper">
                   <div class="flex items-center gap-2 swiper-wrapper">
@@ -339,6 +339,7 @@
                 </div>
               </div>
             </div>
+          </div>
         </section>
       </main>
     </div>
