--- a/index.html
+++ b/index.html
@@ -15,24 +15,23 @@
       href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <!-- <link
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-      rel="stylesheet"
-    /> -->
+    <!-- أنماط Swiper.js للسلايدر -->
     <link rel="stylesheet" href="./swiper-bundle.min.css" />
   </head>
 
   <body dir="rtl">
     <div id="root">
       <!-- إعلان الشحن المجاني -->
-      <div
-        class="flex items-center justify-center p-4 text-sm shadow-sm announcement bg-light-primary text-light-textPrimary shadow-light-textPrimary/50"
-      >
-        <i class="icon-delivery_dining text-2xl mt-0.5"></i>
-        <h1 class="mr-3 font-bold">شحن مجاني والدفع عند الإستلام</h1>
-      </div>
+      <section class="free-shipping">
+        <div
+          class="flex items-center justify-center p-4 text-sm shadow-sm announcement bg-light-primary text-light-textPrimary shadow-light-textPrimary/50"
+        >
+          <i class="icon-delivery_dining text-2xl mt-0.5"></i>
+          <h1 class="mr-3 font-bold">شحن مجاني والدفع عند الإستلام</h1>
+        </div>
+      </section>
 
-      <!-- القسم الرئيسي -->
+      <!-- المحتوى الرئيسي -->
       <main class="main text-light-textPrimary bg-light-background">
         <!-- الهيدر -->
         <header class="px-5 py-6">
@@ -52,6 +51,7 @@
 
               <!-- القائمة -->
               <div class="col-span-7 place-self-end">
+                <!-- زر فتح القائمة -->
                 <button
                   id="menu"
                   class="md:hidden text-2xl mb-[2px] text-gray-800 hover:text-light-primary transition"
@@ -59,16 +59,19 @@
                 >
                   <i class="icon-menu"></i>
                 </button>
+                <!-- محتوى القائمة -->
                 <ul
                   id="nav"
                   class="absolute top-0 right-0 z-10 flex flex-col items-center h-full py-20 shadow-lg md:flex md:flex-row md:items-center md:gap-4 md:py-0 md:static md:top-auto md:right-auto md:w-auto md:h-auto md:bg-transparent md:shadow-none w-60 gap-7 bg-slate-100 shadow-slate-400/50"
                 >
+                  <!-- زر غلق القائمة -->
                   <button
                     id="close"
                     class="absolute transition border rounded-full md:hidden top-5 left-5 bg-light-primary w-9 h-9 hover:bg-light-primary"
                   >
                     X
                   </button>
+                  <!-- عناصر القائمة -->
                   <li>
                     <a href="#" class="transition hover:text-light-primary"
                       >أسئلة و أجوبة</a
@@ -96,7 +99,7 @@
           </div>
         </header>
 
-        <!-- الملاحظة المهمة -->
+        <!-- قسم ملاحظات المنتج -->
         <section
           class="px-5 pt-20 pb-10 text-center important-note md:text-start"
         >
@@ -104,23 +107,22 @@
             <div
               class="grid justify-between gap-16 grid-cols-1 md:grid-cols-12"
             >
+              <!-- صورة المنتج -->
               <div class="col-span-6">
                 <img
                   class="w-full h-full object-cover rounded-3xl"
                   src="./imags/img-important-note.png"
-                  alt=""
+                  alt="مكملات ما قبل التمرين"
                 />
               </div>
+              <!-- وصف المنتج -->
               <div class="flex flex-col justify-center col-span-6 gap-5">
                 <h1 class="text-3xl font-bold">
                   مكملات ما قبل التمرين الأفضل في مصر
                 </h1>
                 <p class="text-lg leading-7 text-light-textSecondary">
                   مصمم لتعزيز الأداء الرياضي والطاقة أثناء التمارين. يحتوي على
-                  مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة، مثل
-                  الكافيين، الكرياتين، والبيتا ألانين. مناسب للرياضيين وهواة
-                  اللياقة البدنية الذين يسعون لتحسين كفاءتهم وتحقيق أفضل أداء
-                  أثناء التمارين.
+                  مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة.
                 </p>
                 <button
                   class="self-center px-6 py-2 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
@@ -132,55 +134,52 @@
           </div>
         </section>
 
-        <!-- صور العلامات التجارية -->
+        <!-- قسم العلامات التجارية -->
         <section class="brands-images px-5 py-7 bg-slate-200">
           <div class="container mx-auto overflow-hidden">
             <div
               class="flex items-center justify-between max-w-full animate-marquee md:animate-none gap-36 md:gap-14"
             >
-              <div class="flex-none">
-                <img
-                  class="h-[35px]"
-                  src="/imags/1735872066196772139.png"
-                  alt=""
-                />
-              </div>
-              <div class="flex-none">
-                <img
-                  class="h-[35px]"
-                  src="/imags/1735872066199903804.png"
-                  alt=""
-                />
-              </div>
-              <div class="flex-none">
-                <img
-                  class="h-[35px]"
-                  src="/imags/1735872066211042121.png"
-                  alt=""
-                />
-              </div>
-              <div class="flex-none">
-                <img
-                  class="h-[35px]"
-                  src="/imags/1735872066213540537.png"
-                  alt=""
-                />
-              </div>
+              <img
+                class="h-[35px]"
+                src="/imags/1735872066196772139.png"
+                alt="علامة تجارية 1"
+              />
+              <img
+                class="h-[35px]"
+                src="/imags/1735872066199903804.png"
+                alt="علامة تجارية 2"
+              />
+              <img
+                class="h-[35px]"
+                src="/imags/1735872066211042121.png"
+                alt="علامة تجارية 3"
+              />
+              <img
+                class="h-[35px]"
+                src="/imags/1735872066213540537.png"
+                alt="علامة تجارية 4"
+              />
             </div>
           </div>
         </section>
 
+        <!-- (Hero Section): يحتوي على السلايدر والمحتوى الرئيسي للمنتج -->
         <section class="hero px-5 py-10">
           <div class="container mx-auto">
+            <!-- شبكة مقسمة إلى أعمدة -->
             <div class="grid grid-cols-1 gap-16 md:grid-cols-12">
+              <!-- قسم السلايدر -->
               <div class="col-span-6">
                 <div class="slider relative mb-5 overflow-hidden rounded-3xl">
+                  <!-- صور السلايدر -->
                   <div class="slides swiper-wrapper">
                     <div class="slide swiper-slide">
                       <img
                         class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
                         src="./imags/middle-1.webp"
                         alt="Slide 1"
+                        loading="lazy"
                       />
                     </div>
                     <div class="w-full slide swiper-slide">
@@ -188,6 +187,7 @@
                         class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
                         src="./imags/middle-2.webp"
                         alt="Slide 2"
+                        loading="lazy"
                       />
                     </div>
                     <div class="w-full slide swiper-slide">
@@ -195,15 +195,16 @@
                         class="object-cover rounded-3xl w-full transition duration-500 hover:scale-100 hover:cursor-default md:hover:scale-125 md:hover:cursor-zoom-in"
                         src="./imags/middle-3.webp"
                         alt="Slide 3"
+                        loading="lazy"
                       />
                     </div>
                   </div>
                 </div>
-
+                <!-- نقاط التنقل (Pagination) -->
                 <div
                   class="swiper-pagination !static !translate-x-0 !w-full"
                 ></div>
-
+                <!-- صور المصغرات -->
                 <div class="hidden mt-5 md:block thumbnail-swiper">
                   <div class="flex items-center gap-2 swiper-wrapper">
                     <div class="flex-1 cursor-pointer thumbnail swiper-slide">
@@ -211,6 +212,7 @@
                         src="./imags/middle-1.webp"
                         class="object-cover w-full h-full rounded-3xl"
                         alt="Thumbnail 1"
+                        loading="lazy"
                       />
                     </div>
                     <div class="flex-1 cursor-pointer thumbnail swiper-slide">
@@ -218,6 +220,7 @@
                         src="./imags/middle-2.webp"
                         class="object-cover w-full h-full rounded-3xl"
                         alt="Thumbnail 2"
+                        loading="lazy"
                       />
                     </div>
                     <div class="flex-1 cursor-pointer thumbnail swiper-slide">
@@ -225,13 +228,17 @@
                         src="./imags/middle-3.webp"
                         class="object-cover w-full h-full rounded-3xl"
                         alt="Thumbnail 3"
+                        loading="lazy"
                       />
                     </div>
                   </div>
                 </div>
               </div>
+
+              <!-- قسم التفاصيل -->
               <div class="col-span-6">
                 <div class="content text-center md:text-start">
+                  <!-- صور الأشخاص -->
                   <div
                     class="flex items-center justify-center md:justify-start gap-1 personal-img"
                   >
@@ -239,40 +246,49 @@
                       <img
                         class="max-w-full rounded-full h-12 w-12"
                         src="./imags/1.jpeg"
-                        alt=""
+                        alt="شخص 1"
+                        loading="lazy"
                       />
                       <img
                         class="max-w-full rounded-full h-12 w-12 relative left-4"
                         src="./imags/2.jpeg"
-                        alt=""
+                        alt="شخص 2"
+                        loading="lazy"
                       />
                       <img
                         class="max-w-full rounded-full h-12 w-12 relative left-8"
                         src="./imags/3.jpeg"
-                        alt=""
+                        alt="شخص 3"
+                        loading="lazy"
                       />
                       <img
                         class="max-w-full rounded-full h-12 w-12 relative left-12"
                         src="./imags/4.jpeg"
-                        alt=""
+                        alt="شخص 4"
+                        loading="lazy"
                       />
                       <img
                         class="max-w-full rounded-full h-12 w-12 relative left-16"
                         src="./imags/5.jpg"
-                        alt=""
+                        alt="شخص 5"
+                        loading="lazy"
                       />
                     </div>
                     <h1 class="text-light-textSecondary text-sm">
                       منتج موثوق من أكثر من 500 شخص
                     </h1>
                   </div>
+
+                  <!-- عنوان المنتج -->
                   <h1 class="font-bold text-2xl my-5">القارئ الإلكتروني</h1>
+
+                  <!-- وصف المنتج -->
                   <p class="text-lg text-light-textSecondary mb-5">
-                    صريات دائرية مع مستقطبات دائرية وأفلام عاكسة (من 0 إلى -5.75
-                    ديوبتر قابلة للتعديل) نطاق تعديل المسافة بين الحدقتين (IPD)
-                    من 58 إلى 72 ملم يعرض الحبر الإلكتروني مقاس 1.3 بوصة وكثافة
-                    271 نقطة في البوصة إضاءة جانبية مع مصابيح LED 3000K
+                    صريات دائرية مع مستقطبات وأفلام عاكسة. يعرض الحبر الإلكتروني
+                    مقاس 1.3 بوصة مع إضاءة جانبية LED لتجربة قراءة مريحة.
                   </p>
+
+                  <!-- السعر وزر الشراء -->
                   <div
                     class="price flex justify-center md:justify-start items-center gap-5"
                   >
@@ -283,14 +299,17 @@
                     <button
                       class="animate-blink px-6 py-2 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
                     >
-                      <span class="animate-blink">اطلب الان</span>
+                      <span>اطلب الآن</span>
                     </button>
                   </div>
                 </div>
+
+                <!-- المؤقت -->
                 <div
                   id="timer"
                   class="text-center text-light-primary font-bold text-sm md:text-lg lg:text-xl flex gap-2 lg:gap-5 justify-center items-center my-7"
                 >
+                  <!-- يوم -->
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -300,9 +319,11 @@
                     ></span>
                     <span>اليوم</span>
                   </div>
+                  <!-- فاصلة -->
                   <div class="text-4xl text-light-textPrimary font-bold -mt-2">
                     :
                   </div>
+                  <!-- ساعة -->
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -310,11 +331,12 @@
                     <span
                       class="h-[2px] w-full bg-light-primary absolute left-0 top-1/2 -translate-y-1/2"
                     ></span>
-                    <span>الساعه</span>
+                    <span>الساعة</span>
                   </div>
                   <div class="text-4xl text-light-textPrimary font-bold -mt-2">
                     :
                   </div>
+                  <!-- دقيقة -->
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -327,6 +349,7 @@
                   <div class="text-4xl text-light-textPrimary font-bold -mt-2">
                     :
                   </div>
+                  <!-- ثانية -->
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -343,6 +366,7 @@
         </section>
       </main>
     </div>
+
     <script src="./swiper-bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
