--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
                 </h1>
                 <p class="text-lg leading-7 text-light-textSecondary">
                   مصمم لتعزيز الأداء الرياضي والطاقة أثناء التمارين. يحتوي على
-                  مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة.
+                  مزيج من المكونات التي تدعم زيادة التركيز، التحمل، والقوة، مثل
+                  الكافيين، الكرياتين، والبيتا ألانين. مناسب للرياضيين وهواة
+                  اللياقة البدنية الذين يسعون لتحسين كفاءتهم وتحقيق أفضل أداء
+                  أثناء التمارين.
                 </p>
                 <button
                   class="self-center px-6 py-2 bg-light-primary rounded-full hover:bg-[#0b875e] transition"
@@ -171,7 +174,7 @@
             <div class="grid grid-cols-1 gap-16 md:grid-cols-12">
               <!-- قسم السلايدر -->
               <div class="col-span-6">
-                <div class="slider relative mb-5 overflow-hidden rounded-3xl">
+                <div class="slider relative mb-5 rounded-3xl overflow-hidden">
                   <!-- صور السلايدر -->
                   <div class="slides swiper-wrapper">
                     <div class="slide swiper-slide">
@@ -283,9 +286,11 @@
                   <h1 class="font-bold text-2xl my-5">القارئ الإلكتروني</h1>
 
                   <!-- وصف المنتج -->
-                  <p class="text-lg text-light-textSecondary mb-5">
-                    صريات دائرية مع مستقطبات وأفلام عاكسة. يعرض الحبر الإلكتروني
-                    مقاس 1.3 بوصة مع إضاءة جانبية LED لتجربة قراءة مريحة.
+                  <p class="text-lg leading-7 text-light-textSecondary mb-5">
+                    صريات دائرية مع مستقطبات دائرية وأفلام عاكسة (من 0 إلى -5.75
+                    ديوبتر قابلة للتعديل) نطاق تعديل المسافة بين الحدقتين (IPD)
+                    من 58 إلى 72 ملم يعرض الحبر الإلكتروني مقاس 1.3 بوصة وكثافة
+                    271 نقطة في البوصة إضاءة جانبية مع مصابيح LED 3000K
                   </p>
 
                   <!-- السعر وزر الشراء -->
