--- a/index.html
+++ b/index.html
@@ -383,16 +383,20 @@
                           >
                             <button
                               type="button"
+                              id="plus"
                               class="minus bg-light-background w-[30px] h-[30px] rounded-lg font-bold text-2xl"
                             >
                               +
                             </button>
                             <input
-                              class="block w-10 text-center text-xl font-bold bg-transparent text-white border border-light-primary rounded-lg"
+                              dir="ltr"
+                              id="quantity"
+                              class="inline-block w-[100px] text-center text-xl font-bold bg-transparent text-white border border-light-primary rounded-lg"
                               type="text"
                               value="1"
                             />
                             <button
+                              id="minus"
                               type="button"
                               class="plus bg-light-background w-[30px] h-[30px] rounded-lg font-bold text-2xl"
                             >
